--- a/lib_repositorios/lib_repositorios.csproj
+++ b/lib_repositorios/lib_repositorios.csproj
@@ -11,4 +11,8 @@
     <ProjectReference Include="..\lib_dominio\lib_dominio.csproj" />
   </ItemGroup>
 
+	<ItemGroup>
+		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.20" />
+	</ItemGroup>
+
 </Project>
