--- a/asp_presentaciones/asp_presentacion.csproj
+++ b/asp_presentaciones/asp_presentacion.csproj
@@ -7,10 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="wwwroot\Imagen\**" />
-    <Content Remove="wwwroot\Imagen\**" />
-    <EmbeddedResource Remove="wwwroot\Imagen\**" />
-    <None Remove="wwwroot\Imagen\**" />
+    <Content Include="Properties\launchSettings.json" />
   </ItemGroup>
 
   <ItemGroup>
